--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,2 @@
-DATABASE_URL=postgresql://postgres:Asdf!234..@localhost:5432/mydatabase
+DATABASE_URL=postgresql://neondb_owner:npg_sS8MgDkPuLa2@ep-polished-lab-a56efezp-pooler.us-east-2.aws.neon.tech/neondb?sslmode=require
+
